# lockr

./: COPYING.txt  MANIFEST.in  Pipfile  README.rst  black.toml  constraints.txt  lockr.py  setup.cfg  tox.ini
tests/: test_pipfile_lock.py
