[metadata]
name = lockr
version = 0.1.dev3
author = Gouji Ochiai
author_email = gjo.ext@gmail.com
url = https://github.com/gjo/lockr
description = Generate constraints.txt from lock file
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
license = MIT
license-file = COPYING.txt
platform = any
classifiers =
  Development Status :: 2 - Pre-Alpha
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
include_package_data = true
install_requires =
py_modules =
  lockr
python_requires = >=3.6
zip_safe = false

[options.extras_require]
develop =
  black==19.10b0
  check-manifest
  coverage
  flake8
  mypy
  pytest
  pytest-randomly
  readme-renderer[md]
  tox
  twine
testing =
  pytest

[options.entry_points]
console_scripts =
  lockr = lockr:main

[options.packages.find]
exclude =
  tasks
  tests

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
  PKG-INFO
  *.egg-info
  *.egg-info/*

[coverage:run]
source =
  lockr
  tests

[flake8]
ignore =
;  # E203: whitespace before ':' (black fails to be PEP8 compliant)
;  E203
;  # E731: do not assign a lambda expression, use a def
;  E731
;  # W503: line break before binary operator (flake8 is not PEP8 compliant)
;  W503
;  # W504: line break after binary operator (flake8 is not PEP8 compliant)
;  W504
exclude =
  .tox
  .venv
  build
  dist
show-source = True

[mypy-setuptools.*]
ignore_missing_imports = true
